# coldcircuit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: API_SPEC_CN.md  FRONTEND_CN.md
examples/: basic_usage.py  gan_vehicle_coldplate.json  serpentine_250w.json  tdp1500_hybrid_reference.json
frontend/: streamlit_app.py  three_viewer.py
src/coldcircuit/: __init__.py  cli.py  components.py  design_rules.py  io.py  manufacturing.py  materials.py  optimization.py  plate.py  report.py  simulation.py  structures.py  tdp1500.py
src/coldcircuit/backends/: __init__.py  cad_build123d.py  openfoam.py
tests/: test_io_examples.py  test_optimization.py  test_simulation.py  test_tdp1500.py
